--- a/3. 前端高薪工程师/02. 就业提升/07 React/02. React核心概念/react-learn/package.json
+++ b/3. 前端高薪工程师/02. 就业提升/07 React/02. React核心概念/react-learn/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.7",
+    "less": "^4.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
