--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/react-learn/package.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/react-learn/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "less": "^4.2.0",
     "react": "^16.8.6",
