--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/react-learn/package.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/react-learn/package.json
@@ -9,7 +9,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
