--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/react-learn/package.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/react-learn/package.json
@@ -6,6 +6,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "less": "^4.2.0",
+    "query-string": "6.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "5.0.1",
