05 / 14. 常见应用-阻止跳转

--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/react-learn/package.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/react-learn/package.json
@@ -35,5 +35,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://api.themoviedb.org"
+  "proxy": "https://api.themoviedb.org",
+  "devDependencies": {}
 }
