--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/07. Redux/react-learn/package.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/07. Redux/react-learn/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.4.5",
+    "redux": "^5.0.1",
     "uuid": "^9.0.1"
   },
   "scripts": {
