--- a/3. Advanced Front-end Developer/02. 就业提升/15 ts基础/03 基本类型检查/tsconfig.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/15 ts基础/03 基本类型检查/tsconfig.json
@@ -3,10 +3,12 @@
   "compilerOptions": {
     // tsc编译选项
 
-    "target": "es2016", // 目标代码版本标准
+    "target": "es6", // 目标代码版本标准
     "module": "commonjs", // 目标使用模块化规范标准
-    "lib": ["es2016"], // 编译时使用的环境（引入的库文件）
-    "outDir": "./dist" // 编译后文件存放位置
+    "lib": ["es6"], // 编译时使用的环境（引入的库文件）
+    "outDir": "./dist", // 编译后文件存放位置
+    "strictNullChecks": true // 是否开启严格的空值检查
   },
+
   "include": ["./src"] // 需要编译的文件的如何文件夹
 }
