--- a/3. Advanced Front-end Developer/02. 就业提升/15 ts基础/code/tsconfig.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/15 ts基础/code/tsconfig.json
@@ -10,7 +10,9 @@
     "strictNullChecks": true, // 是否开启严格的空值检查
     "removeComments": true, // 是否移除注释
     "alwaysStrict": false, // 是否在编译后的文件中添加'use strict'
-    "esModuleInterop": true // 允许使用ES6模块化语法去引入CommonJS模块
+    "esModuleInterop": true, // 允许使用ES6模块化语法去引入CommonJS模块
+    "noEmitOnError": true, // 有错误的代码时不编译
+    "strictPropertyInitialization": true //严格检查属性的初始化
   },
 
   "include": ["./src"]
