--- a/3. Advanced Front-end Developer/02. 就业提升/15 ts基础/practice-pocker/tsconfig.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/15 ts基础/practice-pocker/tsconfig.json
@@ -10,7 +10,8 @@
     "strictNullChecks": true, // 是否开启严格的空值检查
     "removeComments": true, // 是否移除注释
     "alwaysStrict": false, // 是否在编译后的文件中添加'use strict'
-    "esModuleInterop": true // 允许使用ES6模块化语法去引入CommonJS模块
+    "esModuleInterop": true, // 允许使用ES6模块化语法去引入CommonJS模块
+    "strictPropertyInitialization": true
   },
 
   "include": ["./src"]
