--- a/3. Advanced Front-end Developer/02. 就业提升/03 node/code/tsconfig.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/03 node/code/tsconfig.json
@@ -1,20 +1,18 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    // tsc编译选项
+    "target": "es2016", // 目标代码版本标准
+    "module": "commonjs", // 使用 CommonJS 模块化标准
+    "lib": ["es6"], // 编译时使用的环境库
+    "outDir": "./dist", // 编译输出目录
+    // "module": "esnext",
+    "strictNullChecks": true, // 严格空值检查
+    "removeComments": true, // 移除注释
+    "alwaysStrict": false, // 不自动插入 'use strict'
+    "esModuleInterop": true, // 允许 import 兼容 require 模块
+    "noEmitOnError": true, // 有错误不输出文件
+    "strictPropertyInitialization": true, // 严格属性初始化检查
 
-    "target": "es6", // 目标代码版本标准
-    "module": "commonjs", // 目标使用模块化规范标准
-    "lib": ["es6"], // 编译时使用的环境（引入的库文件）
-    "outDir": "./dist", // 编译后文件存放位置
-    "strictNullChecks": true, // 是否开启严格的空值检查
-    "removeComments": true, // 是否移除注释
-    "alwaysStrict": false, // 是否在编译后的文件中添加'use strict'
-    "esModuleInterop": true, // 允许使用ES6模块化语法去引入CommonJS模块
-    "noEmitOnError": true, // 有错误的代码时不编译
-    "strictPropertyInitialization": true //严格检查属性的初始化
+    "types": ["node"] // ✅ 告诉 TypeScript 使用 Node 类型定义
   },
-
   "include": ["./src"]
-  // 需要编译的文件的如何文件夹
 }
