--- a/3. Advanced Front-end Developer/02. 就业提升/03 node/code/tsconfig.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/03 node/code/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2016", // 目标代码版本标准
-    "module": "commonjs", // 使用 CommonJS 模块化标准
+    "module": "nodenext", // 使用 CommonJS 模块化标准
     "lib": ["es6"], // 编译时使用的环境库
     "outDir": "./dist", // 编译输出目录
     // "module": "esnext",
