--- a/3. Advanced Front-end Developer/02. 就业提升/03 node/code/package.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/03 node/code/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon --watch src -e ts --exec \"ts-node\" src/index.ts"
   },
   "dependencies": {
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "sequelize": "^6.37.7"
   }
 }
