--- a/3. Advanced Front-end Developer/02. 就业提升/03 node/code/package.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/03 node/code/package.json
@@ -9,6 +9,8 @@
     "dev": "nodemon --watch src -e ts --exec \"ts-node\" src/index.ts"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7"
   }
