--- a/3. Advanced Front-end Developer/02. 就业提升/03 node/code/package.json
+++ b/3. Advanced Front-end Developer/02. 就业提升/03 node/code/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "dayjs": "^1.11.19",
+    "express": "^5.2.1",
     "md5": "^2.3.0",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
